--- a/battleclone/core/templates/core/base.html
+++ b/battleclone/core/templates/core/base.html
@@ -3,6 +3,8 @@
 <html>
 <head>
     {% block css %}
+        <link rel="stylesheet" href="{% static 'core/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -22,6 +24,9 @@
 
 </body>
 {% block js %}
+    <script src="{% static 'core/js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'core/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'core/js/popper.min.js' %}"></script>
 {% endblock %}
 
 {% block extra_js %}
