--- a/battleclone/core/templates/core/base.html
+++ b/battleclone/core/templates/core/base.html
@@ -2,6 +2,13 @@
 {% load static %}
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {% block fonts %}
+        <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    {% endblock %}
+
+
     {% block css %}
         <link rel="stylesheet" href="{% static 'core/css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
@@ -15,13 +22,23 @@
     {% endblock %}
 
     {% block title %}
-    <title>BattleClone</title>
+        <title>BattleClone</title>
     {% endblock %}
 
 
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 game-title">
+                Battle Clone Browser Game
+            </div>
+        </div>
 
+
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 {% block js %}
     <script src="{% static 'core/js/jquery-3.3.1.min.js' %}"></script>
