--- a/battleclone/account/templates/registration/login.html
+++ b/battleclone/account/templates/registration/login.html
@@ -1,25 +1,40 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+<div class="row">
+    <div class="col-lg-4 login-title">
+        Login and play!
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-4 login-form-error">
+        {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+        {% endif %}
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-4 login-form">
+        <form method="post" action="{% url 'login' %}">{% csrf_token %}
+            <div class="form-group">
+            {{ form.username.label_tag }}
+            {{ form.username }}
 
+            </div>
+            <div class="form-group">
+            {{ form.password.label_tag }}
+            {{ form.password }}
+            </div>
+            <button id="loginBtn" type="submit" value="login" class="btn btn-dark">Log-in</button>
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+            <input type="hidden" name="next" value="{{ next }}" />
+        </form>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-4 register">
+        <a href="#">Nie masz konta? Zarejestruj sie</a>
+    </div>
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
+</div>
 {% endblock %}
