--- a/battleclone/core/static/core/css/base.css
+++ b/battleclone/core/static/core/css/base.css
@@ -9,10 +9,47 @@ body {
     text-align: center;
     padding: 4%;
     font-size: 3rem;
-    color: #cc3300;
+    color: #a01d10;
     font-family: 'Bellefair', serif;
     font-weight: 700;
     letter-spacing: 5px;
     text-shadow: 3px 3px #222222;
 }
 
+.login-title {
+    margin: 0 auto;
+    text-align: center;
+    padding: 1%;
+    margin-bottom: 11px;
+    border-radius: 10px;
+    font-size: 1.5rem;
+    color: #ffffff;
+    font-weight: 600;
+    text-shadow: 2px 2px #222222;
+    letter-spacing: 2px;
+    background: linear-gradient(#9c2011, #6d0016);
+}
+.form-group {
+    color: #222222;
+}
+
+.login-form-error {
+    margin: 0 auto;
+
+}
+
+.login-form {
+    margin: 0 auto;
+    text-align: center;
+
+}
+
+#loginBtn {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.register {
+    margin: 0 auto;
+    text-align: right;
+}
