--- a/battleclone/account/templates/registration/login.html
+++ b/battleclone/account/templates/registration/login.html
@@ -35,6 +35,7 @@
 <div class="row">
     <div class="col-lg-4 register">
         <a href="{% url 'signup' %}">Nie masz konta? Zarejestruj sie</a>
+        <a href="{% url 'password_reset' %}">Zapomnales hasla?</a>
     </div>
 
 </div>
