--- a/battleclone/core/templates/core/base.html
+++ b/battleclone/core/templates/core/base.html
@@ -10,8 +10,8 @@
 
 
     {% block css %}
-        <link rel="stylesheet" href="{% static 'core/css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
+        <link rel="stylesheet" href="{% static 'core/css/simple-grid.min.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -28,22 +28,17 @@
 
 </head>
 <body>
-    <div class="container">
+<div class="container">
         <div class="row">
-            <div class="col-lg-12 game-title">
+            <div class="col-12 game-title">
                 Battle Clone Browser Game
             </div>
         </div>
-
         {% block content %}
         {% endblock %}
-
     </div>
 </body>
 {% block js %}
-    <script src="{% static 'core/js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'core/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'core/js/popper.min.js' %}"></script>
 {% endblock %}
 
 {% block extra_js %}
