--- a/battleclone/account/templates/registration/login.html
+++ b/battleclone/account/templates/registration/login.html
@@ -1,22 +1,21 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    {% include 'includes/registration_modal.html' %}
 
 <div class="row">
-    <div class="col-lg-4 login-title">
+    <div class="login-title">
         Login and play!
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-4 login-form-error">
+    <div class="login-form-error">
         {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
         {% endif %}
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-4 login-form">
+    <div class="login-form">
         <form method="post" action="{% url 'login' %}">{% csrf_token %}
             <div class="form-group">
             {{ form.username.label_tag }}
@@ -27,13 +26,13 @@
             {{ form.password.label_tag }}
             {{ form.password }}
             </div>
-            <button id="loginBtn" type="submit" value="login" class="btn btn-dark">Log-in</button>
+            <button id="loginBtn" type="submit" value="login" class="">Log-in</button>
             <input type="hidden" name="next" value="{{ next }}" />
         </form>
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-4 register">
+    <div class="register">
         <a href="{% url 'signup' %}">Nie masz konta? Zarejestruj sie</a>
         <a href="{% url 'password_reset' %}">Zapomnales hasla?</a>
     </div>
