--- a/battleclone/core/templates/core/includes/menu.html
+++ b/battleclone/core/templates/core/includes/menu.html
@@ -1,4 +1,7 @@
 
-<a href="{% url 'edit_profile' object.pk %}">EDIT YOUR PROFIle</a>
-<br>
-<a href="{% url 'logout' %}">logout</a>
+<div class="menu-item">
+    <a href="{% url 'edit_profile' object.pk %}">EDIT YOUR PROFIle</a>
+</div>
+<div class="menu-item">
+    <a href="{% url 'logout' %}">logout</a>
+</div>
