--- a/battleclone/core/templates/core/base.html
+++ b/battleclone/core/templates/core/base.html
@@ -30,7 +30,7 @@
 <body>
 <div class="container">
         {% block game_header %}
-        <div class="row">
+        <div class="row" style="margin-bottom: 6%;">
             <div class="col-12 game-title">
                 Battle Clone Browser Game
             </div>
