css registration form

--- a/battleclone/account/templates/registration/register.html
+++ b/battleclone/account/templates/registration/register.html
@@ -33,4 +33,10 @@
         </form>
     </div>
 </div>
+<div class="row">
+    <div class="register">
+        <a href="{% url 'login' %}">Jeśli masz konto - zaloguj się!</a>
+        <a href="{% url 'password_reset' %}">Zapomniales hasla?</a>
+    </div>
+</div>
 {% endblock %}
