--- a/battleclone/core/static/core/css/base.css
+++ b/battleclone/core/static/core/css/base.css
@@ -82,11 +82,14 @@ a {
 }
 
 .form-group label {
+    display: inline-block;
+    width: 20%;
     font-weight: 700;
     letter-spacing: 2px;
 }
 .form-group input {
-    width: 50%;
+    display: inline-block;
+    width: 40%;
     height: 30px;
     font-size: 20px;
     border: none;
