--- a/battleclone/core/templates/core/includes/menu.html
+++ b/battleclone/core/templates/core/includes/menu.html
@@ -1,7 +1,6 @@
-
-<div class="menu-item">
-    <a href="{% url 'edit_profile' object.pk %}">EDIT YOUR PROFIle</a>
-</div>
-<div class="menu-item">
-    <a href="{% url 'logout' %}">logout</a>
-</div>
+<a class="menu-item" href="{% url 'edit_profile' object.pk %}">Postać</a>
+<a class="menu-item" href="{% url 'logout' %}">Walka</a>
+<a class="menu-item" href="{% url 'logout' %}">Misje</a>
+<a class="menu-item" href="{% url 'logout' %}">Praca</a>
+<a class="menu-item" href="{% url 'logout' %}">Karczma</a>
+<a class="menu-item" href="{% url 'logout' %}">Turniej</a>
