--- a/battleclone/core/templates/core/includes/menu.html
+++ b/battleclone/core/templates/core/includes/menu.html
@@ -1,6 +1,7 @@
-<a class="menu-item" href="{% url 'edit_profile' object.pk %}">Postać</a>
-<a class="menu-item" href="{% url 'logout' %}">Walka</a>
-<a class="menu-item" href="{% url 'logout' %}">Misje</a>
-<a class="menu-item" href="{% url 'logout' %}">Praca</a>
-<a class="menu-item" href="{% url 'logout' %}">Karczma</a>
-<a class="menu-item" href="{% url 'logout' %}">Turniej</a>
+<a class="menu-item" href="">Postać</a>
+<a class="menu-item" href="">Walka</a>
+<a class="menu-item" href="">Misje</a>
+<a class="menu-item" href="">Praca</a>
+<a class="menu-item" href="">Karczma</a>
+<a class="menu-item" href="">Turniej</a>
+<a class="menu-item" href="{% url 'edit_profile' object.pk %}">Ustawienia</a>
