--- a/battleclone/account/templates/profile/edit_profile.html
+++ b/battleclone/account/templates/profile/edit_profile.html
@@ -1,13 +1,14 @@
 {% extends 'core/game.html' %}
 
-
-{#<h2>Edytuj profil</h2>#}
-{#<form method="post" enctype="multipart/form-data" action="">{% csrf_token %}#}
-{#    <table>#}
-{#        {{ form.as_p }}#}
-{##}
-{#    </table>#}
-{#<button type="submit">UPDA</button>#}
-{#</form>#}
-{##}
-{#    <a href="{% url 'password_change' %}"> <h2>ZMIEN HASLO</h2></a>#}
+{% block game_content %}
+    <div class="col-12 edit-profie-header">
+        <h2>Edytuj profil</h2>
+    </div>
+   <div class="col-12 edit-profile-form-container">
+        <form method="post" class="edit-profile-form" enctype="multipart/form-data" action="">{% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">UPDA</button>
+        </form>
+   </div>
+    <a style="text-decoration: none;" href="{% url 'password_change' %}"><h2 style="text-align: center; color: white;">ZMIEN HASLO</h2></a>
+{% endblock %}
