Add logic for work module and tests

--- a/battleclone/core/templates/core/includes/menu.html
+++ b/battleclone/core/templates/core/includes/menu.html
@@ -4,4 +4,5 @@
 <a class="menu-item" href="">Praca</a>
 <a class="menu-item" href="">Karczma</a>
 <a class="menu-item" href="">Turniej</a>
+<a class="menu-item" href="">Ranking</a>
 <a class="menu-item" href="{% url 'edit_profile' object.pk %}">Ustawienia</a>
