Fix bug with no object.pk

--- a/battleclone/work/templates/work/work_view.html
+++ b/battleclone/work/templates/work/work_view.html
@@ -1,5 +1,6 @@
 {% extends 'core/game.html' %}
 
-{% block content %}
+{% block game_content %}
+    {{ object }}
     {{ form.as_p }}
 {% endblock %}
