--- a/battleclone/character/static/character/css/character.css
+++ b/battleclone/character/static/character/css/character.css
@@ -1,7 +1,8 @@
 .banner{
-    background-image: url('../images/herb_2.png');
-wedwedqe    background-position:center;
+    background-image: url('../images/romania-42061.svg');
+    background-position:top;
     background-repeat: no-repeat;
+    background-size: 80%;
     text-align:center;
     max-width:100%;
     height:auto;
@@ -22,9 +23,16 @@ wedwedqe    background-position:center;
     }
 #character-attributes li{
     color: white;
-    font-size:1.2em;
+    font-size:2.2em;
     }
 
 #character-attributes a{
      text-decoration: none;
     }
+
+
+@media only screen and (max-width: 1400px) {
+    #character-attributes li{
+        font-size:1.2em;
+    }
+}
