Add gold inofrmation in top bar

--- a/battleclone/core/static/core/css/base.css
+++ b/battleclone/core/static/core/css/base.css
@@ -165,7 +165,7 @@ background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+
 
 .character-bar-info {
     color: white;
-    margin: 3%;
+    /*margin: 1%;*/
     display: inline;
 }
 
