--- a/battleclone/core/templates/core/game.html
+++ b/battleclone/core/templates/core/game.html
@@ -12,12 +12,16 @@
                 <img src="{{ object.avatar.url }}" class="avatar">
                 {% endif %}
             </div>
-            <div class="col-2 character-bar-info">
+            <div class="col-1 character-bar-info">
                     {{ object.character.nickname}}
             </div>
             <div class="col-2 character-bar-info">
                 {% trans 'Level:' %}
                 {{ object.character.level}}
+            </div>
+            <div class="col-2 character-bar-info">
+                {% trans 'Gold:' %}
+                {{ object.character.gold }}
             </div>
             <div class="col-2 character-bar-info">
                 {% trans 'Exp:' %}
