Add displaying remaing work time

--- a/battleclone/work/templates/work/work_view.html
+++ b/battleclone/work/templates/work/work_view.html
@@ -1,5 +1,6 @@
 {% extends 'core/game.html' %}
 {% load static %}
+{% load work %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'work/css/work.css' %}">
@@ -14,8 +15,12 @@
         <p>{{ form.work_type }}</p>
         <button type="submit">Go to work</button>
     </form>
+    {% elif object.character.status == 'WORK' %}
+        <h2 style="color: white;">Twoj rycerz jest w pracy, pozostały czas:</h2>
+        <h2 style="color: white;">{% time_remain work_object %}</h2>
+
     {% else %}
-        <h2>{{ object }}</h2>
+        <h2 style="color: white;">Twoj rycerz robi teraz coś innego, nie moze isc do pracy</h2>
     {% endif %}
 
 {% endblock %}
